TODO
* create decompress handle for decompression tools
* add tests for mssearchdecode.c

* create xor tool that will byte-wise xor a file using a "key"
* create equivalent of sigfind that is more powerful
  can handle more than 4 byte signatures
* create lz1decompress (or equiv) for NSF compression
* create lzxdecompress

* decompression tools and code
  - clean up, make stand-alone libs
  - add compression equiv
  - move all the decompression into one tool?

* lznt1decompress
- allow to set size of decompressed data

* zdecompress
  - zdecompress enlarge buffer when zlib uncompress fails (size uncompressed = 81 x size compressed)
  - add support for adler

lzxpressdecompress
- allow to set size of decompressed data

* xor64
  - check/fix mode 2
* fix winapi build on cygwin
* use PRI definions for winapi build E.g. %jd
* change 7-bit ascii into 7-bit
* 2011 update
* move data dump to verbose output
* automatically detect file size

Alder-32
* finish SIMD variant

CRC-32
* implement basic (scalar) CRC-32 calculation method
* implement basic (scalar) weak CRC-32 calculation method
* add mod2 polynomial support

Fletcher-16
* finish fletcher16

Filetime:
* create equivalent tool in libfdatetime

20141110
* see `git log' for more recent change log

20140512
* worked on lzxpressdecompress

20140418
* moved lzxpress and lznt1 support to libfwnt
* renamed on ntfsdecompress to lznt1decompress

20140414
* worked on ntfsdecompress
* worked on lzxpressdecompress
  - XPRESS Huffman compression

20140228
* worked on cxdecompress

20140131
* 2014 update

20130706
* worked on zdecompress

20130401
* 2013 update
* updated dependencies
* worked on replacing notify.[ch] by libcnotify
* worked on replacing file_io.[ch] by libcfile
* worked on replacing getopt by libcsystem
* code clean up

20121205
* banalyze added entropy
* removed memwatch

20120825
* fixed issue in bmd5sum not handling size correctly
* reverse library order in Makefile.am