@@ -217,11 +217,20 @@ int main( int argc, char * const argv[] )
 
 		goto on_error;
 	}
-	if( libcfile_file_open(
-	     source_file,
-	     source,
-	     LIBCFILE_OPEN_READ,
-	     &error ) != 1 )
+#if defined( HAVE_WIDE_SYSTEM_CHARACTER )
+	result = libcfile_file_open_wide(
+	          source_file,
+	          source,
+	          LIBCFILE_OPEN_READ,
+	          &error );
+#else
+	result = libcfile_file_open(
+	          source_file,
+	          source,
+	          LIBCFILE_OPEN_READ,
+	          &error );
+#endif
+ 	if( result != 1 )
 	{
 		fprintf(
 		 stderr,
@@ -447,11 +456,20 @@ int main( int argc, char * const argv[] )
 
 		goto on_error;
 	}
-	if( libcfile_file_open(
-	     destination_file,
-	     destination,
-	     LIBCFILE_OPEN_WRITE,
-	     &error ) != 1 )
+#if defined( HAVE_WIDE_SYSTEM_CHARACTER )
+	result = libcfile_file_open_wide(
+	          destination_file,
+	          destination,
+	          LIBCFILE_OPEN_WRITE,
+	          &error );
+#else
+	result = libcfile_file_open(
+	          destination_file,
+	          destination,
+	          LIBCFILE_OPEN_WRITE,
+	          &error );
+#endif
+ 	if( result != 1 )
 	{
 		fprintf(
 		 stderr,
